--- a/css/kasper.css
+++ b/css/kasper.css
@@ -362,7 +362,7 @@ header nav .form i {
     padding-bottom: var(--section-padding);
     height: 600px;
     position: relative;
-    background-image: url(/images/Design.jpg);
+    background-image: url("../images/Design.jpg");
     background-size: cover;
     display: flex;
     align-items: center;
@@ -794,7 +794,7 @@ header nav .form i {
 .quote {
     padding-top: var(--section-padding);
     padding-bottom: var(--section-padding);
-    background-image: url(/images/quote.jpg);
+    background-image: url("../images/quote.jpg");
     background-size: cover;
     position: relative;
     text-align: center;
